--- a/theme/default.css
+++ b/theme/default.css
@@ -3,22 +3,35 @@
     --lkt-icon-font-size: 14px;
     --lkt-icon-font-weight: 14px;
     --lkt-icon-text-align: center;
-    --lkt-icon-padding: 15px;
+    --lkt-icon-padding: 0;
     --lkt-icon-min-width: initial;
     --lkt-icon-max-width: initial;
     --lkt-icon-width: initial;
     --lkt-icon-min-height: initial;
     --lkt-icon-max-height: initial;
     --lkt-icon-height: initial;
-    --lkt-icon-bg: #ffffff;
-    --lkt-icon-bg-hover: #ffffff;
+    --lkt-icon-bg: transparent;
+    --lkt-icon-bg-hover: transparent;
     --lkt-icon-color: #444444;
     --lkt-icon-color-hover: #444444;
-    --lkt-icon-border-radius: 1px;
-    --lkt-icon-border-width: 1px;
+    --lkt-icon-border-radius: 0;
+    --lkt-icon-border-width: 0;
     --lkt-icon-border-style: solid;
-    --lkt-icon-border-color: #ffffff;
-    --lkt-icon-border-color-hover: #ffffff;
+    --lkt-icon-border-color: transparent;
+    --lkt-icon-border-color-hover: transparent;
     --lkt-icon-transition: all linear 300ms;
     --lkt-icon-margin: 0;
+    --lkt-icon-align-items: center;
+    --lkt-icon-justify-content: center;
+    --lkt-icon-flex-direction: column;
+
+    --lkt-icon--icon--padding: 0;
+    --lkt-icon--icon--bg: transparent;
+    --lkt-icon--icon--border-radius: 0;
+    --lkt-icon--icon--border-width: 0;
+    --lkt-icon--icon--border-style: solid;
+    --lkt-icon--icon--border-color: transparent;
+    --lkt-icon--icon--font-size: 30px;
+    --lkt-icon--icon--color: #444444;
+    --lkt-icon--icon--margin: 0;
 }
