--- a/theme/default.css
+++ b/theme/default.css
@@ -1,7 +1,7 @@
 :root {
     --lkt-icon-gap: 15px;
     --lkt-icon-font-size: 14px;
-    --lkt-icon-font-weight: 14px;
+    --lkt-icon-font-weight: 400;
     --lkt-icon-text-align: center;
     --lkt-icon-padding: 0;
     --lkt-icon-min-width: initial;
@@ -34,4 +34,6 @@
     --lkt-icon--icon--font-size: 30px;
     --lkt-icon--icon--color: #444444;
     --lkt-icon--icon--margin: 0;
+    --lkt-icon--icon--width: auto;
+    --lkt-icon--icon--height: auto;
 }
