--- a/theme/default.css
+++ b/theme/default.css
@@ -13,6 +13,8 @@
     --lkt-icon--gap: 15px;
     --lkt-icon--height: initial;
     --lkt-icon--justify-content: center;
+    --lkt-icon--line-height: initial;
+    --lkt-icon--letter-spacing: initial;
     --lkt-icon--margin: 0;
     --lkt-icon--max-height: initial;
     --lkt-icon--max-width: initial;
